# rb-rovi

./: .clang-format  .gitignore  README.md  log.md
ws/src/rovi_gazebo/: CMakeLists.txt  README.md  package.xml  test_commands.txt
ws/src/rovi_gazebo/include/rovi_gazebo/: rovi_gazebo.h
ws/src/rovi_gazebo/launch/: move_robot.launch  workcell.launch
ws/src/rovi_gazebo/models/blender/: models.blend  models.blend1
ws/src/rovi_gazebo/models/bottle/: model.config  model.sdf
ws/src/rovi_gazebo/models/camera/: model.sdf
ws/src/rovi_gazebo/models/camera_stereo/: model.config  model.sdf
ws/src/rovi_gazebo/models/coffecan/: coffecan.dae  coffecan.ply  model.config  model.sdf
ws/src/rovi_gazebo/models/crate/: crate.dae  model.config  model.sdf
ws/src/rovi_gazebo/models/cube/: cube.dae  model.config  model.sdf
ws/src/rovi_gazebo/models/cube1/: model.config  model.sdf
ws/src/rovi_gazebo/models/cube2/: model.config  model.sdf
ws/src/rovi_gazebo/models/cube3/: cube3.stl  model.config  model.sdf
ws/src/rovi_gazebo/models/kinect/: model.config  model.sdf
ws/src/rovi_gazebo/models/milk/: milk.dae  milk.ply  milk_color.ply  model.config  model.sdf
ws/src/rovi_gazebo/models/monkey/: model.config  model.sdf  monkey.dae
ws/src/rovi_gazebo/models/mug/: model.config  model.sdf  mug.dae  mug.ply
ws/src/rovi_gazebo/models/projector/: model.config  model.sdf
ws/src/rovi_gazebo/models/sphere/: model.config  model.sdf
ws/src/rovi_gazebo/models/table/: model.config  model.sdf  table.dae
ws/src/rovi_gazebo/scripts/: inertia_calculations.py  move_robot.sh
ws/src/rovi_gazebo/src/: example.cpp  lib_rovi_gazebo.cpp
ws/src/rovi_gazebo/world/: groundless.world
ws/src/rovi_planner/: CMakeLists.txt  package.xml
ws/src/rovi_planner/include/interpolator/: ur5_interpolator.h
ws/src/rovi_planner/include/rovi_planner/: rovi_planner.h
ws/src/rovi_planner/src/: goto_pose.cpp  grasp_test.cpp  lib_rovi_planner.cpp  librovi_planner.cpp  traj_test.cpp  ur5_interpolator.cpp  ur5_test.cpp
ws/src/rovi_pose_estimator/: CMakeLists.txt  package.xml
ws/src/rovi_pose_estimator/include/rovi_pose_estimator/: rovi_pose_est.h  rovi_pose_est_M1.h  rovi_pose_estimator.h
ws/src/rovi_pose_estimator/launch/: pose_M1.launch  pose_M3.launch
ws/src/rovi_pose_estimator/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  lib_rovi_pose_est_M1.cpp  lib_rovi_pose_est_M3.cpp  lib_rovi_pose_estimator.cpp  pose_M1.cpp  pose_M3.cpp  pose_example.cpp
ws/src/rovi_system/: CMakeLists.txt  package.xml  rovi-tests.txt
ws/src/rovi_system/data/M1_test_noise/: caput_v2.m  (+7 more)
ws/src/rovi_system/launch/: planning.launch  planning.moveit.launch  reachability.launch  template.launch
ws/src/rovi_system/src/: interpolation_kdl.cpp  planning_common.hpp  planning_integrated.cpp  planning_kdl.cpp  planning_rrt.cpp  reachability.cpp  template.cpp
ws/src/rovi_utils/: CMakeLists.txt  package.xml
ws/src/rovi_utils/matlab/: cart_traj.m  final_plot_method.m  jnt_traj.m  m1_no_noise.m  m3_no_noise.m  m3_noise.asv  m3_noise.m  planning_integrated.m  planning_interpolation_demo.m  planning_kdl.m  planning_rrt.m  plot_experiment_3.m  plot_jnt_traj.m  reachabilty.m  rovi_common.m
ws/src/rovi_utils/scripts/: plot_me.py
ws/src/rovi_utils/src/: lib_rovi_utils.cpp
ws/src/ur5_controllers/: CMakeLists.txt  package.xml  test_command.txt  ur5_controllers_plugin.xml
ws/src/ur5_controllers/config/: control.yaml  default_controllers.yaml  default_ee_controllers.yaml  ur5_controllers.yaml  wsg_controllers.yaml
ws/src/ur5_controllers/launch/: car_ur5.launch  ee_car_ur5.launch  ur5.launch  ur5.old.launch  ur5_ee.launch  ur5_test.launch
ws/src/ur5_controllers/msg/: PoseTwist.msg
ws/src/ur5_controllers/src/: cartesian_pose_controller.cpp  joint_position_controller.cpp  joint_position_pd_gravity_controller.cpp  lib_interface.cpp  main.cpp  wsg_hybrid_controller.cpp
ws/src/ur5_description/: CMakeLists.txt  package.xml
ws/src/ur5_description/robots/: ur5.gazebo.xacro  ur5.robot.urdf.xacro  ur5.transmission.xacro  ur5.urdf  ur5.urdf.xacro  ur5_arm.xacro  ur5_with_wsg.urdf.xacro  wsg.gazebo.xacro  wsg.transmission.xacro  wsg.urdf.xacro  wsg.xacro
ws/src/ur5_dynamics/: CMakeLists.txt  package.xml
ws/src/ur5_dynamics/src/: iktest.cpp  lib_ur5_dynamics.cpp  lib_wsg_dynamics.cpp  ur5_inv.cpp
ws/src/ur5_move_it/: .setup_assistant  CMakeLists.txt  package.xml
ws/src/ur5_move_it/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5.srdf
ws/src/ur5_move_it/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml  warehouse.launch
ws/src/ur5_move_it/src/: gazebo2rviz.cpp
ws/src/ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ws/src/ur5_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5.srdf
ws/src/ur5_moveit_config/launch/: default.launch  default_ompl.launch  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  planning_context.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  test_ompl.launch  trajectory_execution.launch.xml
ws/src/ur5_moveit_config/src/: gazebo2rviz.cpp  lib_moveit_utils.cpp  plan_scene.cpp  plan_test.cpp  rrt_test.cpp  ur5_moveit_planner.cpp  ur5_reachability.cpp
ws/src/ur_controllers/: CMakeLists.txt  package.xml
ws/src/ur_controllers/config/: ur_controller.yaml
ws/src/ur_controllers/launch/: ur5.launch
ws/src/ur_controllers/src/: main.cpp  ur5_kin.cpp
ws/src/ur_description/: CMakeLists.txt  package.xml
ws/src/ur_description/launch/: ur5_upload.launch
ws/src/ur_description/robots/: ur5.gazebo.xacro  ur5.transmission.xacro  ur5.xacro
(+470 files in other folders)
