<?xml version="1.0"?>
<package format="2">

	<name>rovi_gazebo</name>
	<version>1.0.0</version>
	<description>Integration of ROVI work cell, objects etc. into Gazebo.</description>

	<author email="dscho15@student.sdu.dk">Daniel Tofte Schøn</author>
	<author email="marta16@student.sdu.dk">Martin Androvich</author>

	<maintainer email="dscho15@student.sdu.dk">Daniel Tofte Schøn</maintainer>

	<license>BSD</license>

	<url type="repository">https://github.com/martinandrovich/rb-rovi</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>xacro</depend>
	<depend>gazebo_ros</depend>
	<depend>sensor_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>moveit_msgs</depend>
	<depend>rovi_utils</depend>

	<depend>Eigen3</depend>

	<export>

	<!--
		 https://answers.gazebosim.org//question/6568/uri-paths-to-packages-in-the-sdf-model-file/
		 gazebo_ros_paths_plugin automatically adds these to GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH
		 when you do this export inside the package.xml file. You can than use URIs of type model://my_package/stuff.

		 test with:
		 rospack plugins -\-attrib="gazebo_media_path" gazebo_ros

		 will only work when launched using gazebo_ros
	-->

	<gazebo_ros
		gazebo_plugin_path="${prefix}/lib"
		gazebo_model_path="${prefix}/models"
	/>

	</export>

</package>
