<?xml version="1.0"?>
<package format="2">

	<name>rovi_planner</name>
	<version>1.0.0</version>
	<description>Planner library for UR5 robot.</description>

	<author>Daniel Tofte Schøn</author>
	<author>Martin Androvich</author>

	<maintainer email="marta16@student.sdu.dk">Martin Androvich</maintainer>
	<maintainer email="dscho15@student.sdu.dk">Daniel Tofte Schøn</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>roslib</depend>
	<!-- <depend>orocos_kdl</depend> -->
	<!-- <depend>liborocos-kdl-dev</depend> -->
	<depend>kdl_parser</depend>
	<depend>tf_conversions</depend>
	<depend>eigen_conversions</depend>

	<depend>ur5_dynamics</depend>

</package>
