<?xml version="1.0"?>
<package format="2">

	<name>rovi_planner</name>
	<version>1.0.0</version>
	<description>Planner library for UR5 robot.</description>

	<author email="dscho15@student.sdu.dk">Daniel Tofte Schøn</author>
	<author email="marta16@student.sdu.dk">Martin Androvich</author>

	<maintainer email="dscho15@student.sdu.dk">Daniel Tofte Schøn</maintainer>

	<license>BSD</license>
	
	<url type="repository">https://github.com/martinandrovich/rb-rovi</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>roslib</depend>
	<!-- <depend>orocos_kdl</depend> -->
	<!-- <depend>liborocos-kdl-dev</depend> -->
	<depend>kdl_parser</depend>
	<depend>tf_conversions</depend>
	<depend>eigen_conversions</depend>
	<depend>kdl_conversions</depend>
	<depend>rviz</depend>
	<depend>ur5_dynamics</depend>
	<depend>ur5_controllers</depend>
	<depend>ur5_moveit_config</depend>
	<depend>rovi_utils</depend>
	<!-- <depend>ompl</depend> -->

</package>
