<?xml version="1.0"?>
<package format="2">

	<name>rovi_pose_estimator</name>
	<version>1.0.0</version>
	<description>Pose estimation for ROVI project.</description>

	<author email="pniel17@student.sdu.dk">Peter Nielsen</author>

	<maintainer email="pniel17@student.sdu.dk">Peter Nielsen</maintainer>
	<maintainer email="marta16@student.sdu.dk">Martin Androvich</maintainer>

	<license>BSD</license>

	<url type="repository">https://github.com/martinandrovich/rb-rovi</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>Eigen3</depend>
	<depend>sensor_msgs</depend>
	<depend>OpenCV</depend>
	<depend>vision_opencv</depend>
	<depend>image_transport</depend>
	<depend>pcl_ros</depend>
	<depend>rovi_utils</depend>
	
	<export>
		<gazebo_ros gazebo_plugin_path="${prefix}/lib"/>
	</export>

</package>
