<?xml version="1.0"?>
<package format="2">

	<name>rovi_pose_estimator</name>
	<version>1.0.0</version>
	<description>Pose estimation for ROVI project.</description>

	<author email="pniel17@student.sdu.dk">Peter Nielsen</author>

	<maintainer email="pniel17@student.sdu.dk">Peter Nielsen</maintainer>
	<maintainer email="marta16@student.sdu.dk">Martin Androvich</maintainer>

	<license>BSD</license>

	<url type="repository">https://github.com/martinandrovich/rb-rovi</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>sensor_msgs</depend>
	<depend>rovi_utils</depend>
	<depend>rovi_gazebo</depend>
	<depend>pcl_ros</depend>
	<depend>vision_opencv</depend>
	<depend>image_transport</depend>
	
	<depend>Eigen3</depend>
	<depend>OpenCV</depend>

	<export>
		<gazebo_ros gazebo_plugin_path="${prefix}/lib"/>
	</export>

</package>
