<?xml version="1.0"?>
<package format="2">

  <name>ur5_controllers</name>

  <version>0.0.0</version>

  <description>
      Gazebo wrapper for the Universal UR5/10 robot arms.
  </description>


  <author>Daniel Tofte Schøn</author>
  <maintainer email="dscho15@student.sdu.dk">Daniel Tofte Schøn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>controller_manager</depend>
  <depend>effort_controllers</depend>
  <depend>position_controllers</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>robot_state_publisher</depend>
  <depend>rostopic</depend>

  <depend>ur5_description</depend>

</package>
