<?xml version="1.0"?>
<package format="2">

	<name>ur5_controllers</name>
	<version>1.0.0</version>
	<description>Gazebo wrapper for the Universal UR5 robot arms.</description>

	<author>Daniel Tofte Schøn</author>
	<maintainer email="dscho15@student.sdu.dk">Daniel Tofte Schøn</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>xacro</depend>
	<depend>urdf</depend>
	<depend>controller_manager</depend>
	<depend>controller_interface</depend>
	<depend>gazebo_ros</depend>
	<depend>std_msgs</depend>
	<depend>effort_controllers</depend>
	<depend>position_controllers</depend>
	<depend>joint_state_controller</depend>
	<depend>joint_trajectory_controller</depend>
	<depend>joint_state_publisher</depend>
	<depend>robot_state_publisher</depend>
	<depend>kdl_parser</depend>
	<depend>pluginlib</depend>
	<depend>geometry_msgs</depend>

	<depend>ur5_description</depend>
	<depend>ur5_dynamics</depend>

	<depend>message_generation</depend>
	<exec_depend>message_runtime</exec_depend>

	<export>
		<controller_interface plugin="${prefix}/ur5_controllers_plugin.xml"/>
	</export>

</package>
